--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "node-api2-project",
-  "version": "0.0.1",
+  "name": "node-api1-project",
+  "version": "1.0.0",
+  "description": "Node API 1 Project Code",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
-    "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
-  },
-  "dependencies": {
-    "knex": "^2.0.0",
-    "sqlite3": "^5.0.8"
+    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^26.0.24",
     "cross-env": "^7.0.3",
-    "eslint": "^8.15.0",
-    "jest": "^28.1.0",
-    "nodemon": "^2.0.16",
-    "supertest": "^6.2.3"
+    "eslint": "^7.32.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "shortid": "^2.2.16"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BloomInstituteOfTechnology/node-api2-project.git"
+    "url": "git+https://github.com/LambdaSchool/node-api1-project.git"
   }
 }
