--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@types/jest": "^26.0.24",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
-    "jest": "^26.6.3",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.4"
   },
   "dependencies": {
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "knex": "^3.1.0",
     "shortid": "^2.2.16"
   },
   "repository": {
