--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "knex": "^3.1.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "sqlite3": "^5.1.7"
   },
   "repository": {
     "type": "git",
