--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "node-api1-project",
-  "version": "1.0.0",
-  "description": "Node API 1 Project Code",
+  "name": "node-api2-project",
+  "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.24",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
-    "jest": "^29.7.0",
-    "nodemon": "^2.0.12",
-    "supertest": "^6.1.4"
+    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
+    "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "helmet": "^4.6.0",
-    "knex": "^3.1.0",
-    "shortid": "^2.2.16",
-    "sqlite3": "^5.1.7"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "knex": "^2.0.0",
+    "sqlite3": "^5.0.8"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.5.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.15.0",
+    "jest": "^28.1.0",
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.3"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LambdaSchool/node-api1-project.git"
+    "url": "git+https://github.com/BloomInstituteOfTechnology/node-api2-project.git"
   }
 }
